<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textSize="59sp"
        android:textColor="@color/colorButton_txt"
        android:text="@string/digit"
        android:gravity="end"/>

    <LinearLayout
        android:id="@+id/line0"
        android:layout_below="@id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_c"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButton_dig"
            android:text="@string/reset"
            android:textSize="50sp"
            />

        <Button
            android:id="@+id/btn_sign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButton_dig"
            android:text="@string/sign"
            android:textSize="50sp"/>

        <Button
            android:id="@+id/btn_percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButton_dig"
            android:text="@string/percent"
            android:textSize="50sp"/>

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButton_act"
            android:text="@string/divide"
            android:textColor="@color/colorButton_txt"
            android:textSize="50sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line1"
        android:layout_below="@id/line0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButton_dig"
            android:text="@string/_7"
            android:textSize="50sp"/>

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButton_dig"
            android:text="@string/_8"
            android:textSize="50sp"/>

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButton_dig"
            android:text="@string/_9"
            android:textSize="50sp"/>

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButton_act"
            android:text="@string/multiply"
            android:textColor="@color/colorButton_txt"
            android:textSize="50sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_below="@id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButton_dig"
            android:text="@string/_4"
            android:textSize="50sp"/>

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButton_dig"
            android:text="@string/_5"
            android:textSize="50sp"/>

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButton_dig"
            android:text="@string/_6"
            android:textSize="50sp"/>

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButton_act"
            android:text="@string/minus"
            android:textColor="@color/colorButton_txt"
            android:textSize="50sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line3"
        android:layout_below="@id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButton_dig"
            android:text="@string/_1"
            android:textSize="50sp"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButton_dig"
            android:text="@string/_2"
            android:textSize="50sp"/>

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButton_dig"
            android:text="@string/_3"
            android:textSize="50sp"/>

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButton_act"
            android:text="@string/plus"
            android:textColor="@color/colorButton_txt"
            android:textSize="50sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line4"
        android:layout_below="@id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:backgroundTint="@color/colorButton_dig"
            android:text="@string/_0"
            android:textSize="50sp"/>

        <Button
            android:id="@+id/btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButton_dig"
            android:text="@string/dot"
            android:textSize="50sp"/>
        <Button
            android:id="@+id/btn_equally"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButton_act"
            android:text="@string/equally"
            android:textColor="@color/colorButton_txt"
            android:textSize="50sp"/>
    </LinearLayout>

</RelativeLayout>